--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COFFEE</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="index.css">
 
 </head>
 
@@ -44,9 +44,11 @@
             </header>
             <main class="wrapper">
                 <div class="my-2 menu-search">
-                    <h2 id="category-title",class="text2">☕ Suerte 메뉴 관리</h2>
+                    <h2 id="category-title",class="text2"> 메뉴 관리</h2>
                     <span class="menu-count">총 0개</span>
                 </div>
+
+                
                 <form id="menu-form">
                     <div class="d-flex">
                         <!-- <label for="coffee-name" class="input-label">커피 메뉴이름</label> -->
@@ -66,7 +68,7 @@
     </div>
 
 
-    <script src="./routes/index.js"></script>
+    <script type="module" src="../utils/index.js"></script>
 
 </body>
 
